configuracion del cliente, aun no funca ver usuarios