@@ -19,13 +19,6 @@
     </properties>
 
     <dependencies>
-        <!-- Dependencia al Servidor Central (ya instalado con mvn install) -->
-        <dependency>
-            <groupId>com.culturarte</groupId>
-            <artifactId>culturartepda</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
         <!-- API de Servlets (Tomcat 9 usa javax.servlet) -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -80,20 +73,36 @@
                     <release>21</release>
                 </configuration>
             </plugin>
+
+            <!-- Plugin moderno para generar clases del WS -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.2</version>
-                <configuration>
-                    <packagingExcludes>
-                        WEB-INF/lib/culturartepda-1.0-SNAPSHOT.jar,
-                        WEB-INF/classes/com/culturarte/logica/controllers/**,
-                        WEB-INF/classes/com/culturarte/logica/dtos/**,
-                        WEB-INF/classes/com/culturarte/logica/utils/**
-                    </packagingExcludes>
-                </configuration>
+                <groupId>com.sun.xml.ws</groupId>
+                <artifactId>jaxws-maven-plugin</artifactId>
+                <version>4.0.3</version>
+                <executions>
+                    <execution>
+                        <id>wsimport</id>
+                        <goals>
+                            <goal>wsimport</goal>
+                        </goals>
+                        <configuration>
+                            <wsdlUrls>
+                                <wsdlUrl>http://localhost:9128/proponente?wsdl</wsdlUrl>
+                                <wsdlUrl>http://localhost:9128/colaborador?wsdl</wsdlUrl>
+                                <wsdlUrl>http://localhost:9128/propuesta?wsdl</wsdlUrl>
+                                <wsdlUrl>http://localhost:9128/colaboracion?wsdl</wsdlUrl>
+                                <wsdlUrl>http://localhost:9128/seguimiento?wsdl</wsdlUrl>
+                                <wsdlUrl>http://localhost:9128/categoria?wsdl</wsdlUrl>
+                            </wsdlUrls>
+                            <packageName>com.culturarte.web.ws.cliente</packageName>
+                            <sourceDestDir>${project.build.directory}/generated-sources/wsimport</sourceDestDir>
+                            <keep>true</keep>
+                            <vmArgs>--add-opens java.base/java.lang=ALL-UNNAMED</vmArgs>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
-
     </build>
+
 </project>
